--- a/common/pom.xml
+++ b/common/pom.xml
@@ -47,6 +47,17 @@
             <artifactId>aspectjweaver</artifactId>
         </dependency>
     
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+    
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+        </dependency>
+        
+        
     </dependencies>
     
 </project>
