--- a/train-member/src/main/resources/application.properties
+++ b/train-member/src/main/resources/application.properties
@@ -1,2 +1,10 @@
 server.port=8001
 server.servlet.context-path=/member
+
+spring.datasource.url=jdbc:mysql://8.130.53.106:3306/train_member?characterEncoding=UTF8&autoReconnect=true&serverTimezone=Asia/Shanghai
+spring.datasource.username=root
+spring.datasource.password=990194923
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+mybatis.mapper-locations=classpath:/mapper/**/*.xml
+logging.level.com.rl.train.member.mapper=trace
