--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -33,6 +33,17 @@
             <artifactId>jaxen</artifactId>
             <version>1.2.0</version>
         </dependency>
+        
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
+        </dependency>
+    
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.22</version>
+        </dependency>
     </dependencies>
     
     <build>
