--- a/generator/pom.xml
+++ b/generator/pom.xml
@@ -44,6 +44,12 @@
             <artifactId>mysql-connector-java</artifactId>
             <version>8.0.22</version>
         </dependency>
+        <dependency>
+            <groupId>com.rl</groupId>
+            <artifactId>train-member</artifactId>
+            <version>0.0.1-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
     
     <build>
