--- a/train-business/pom.xml
+++ b/train-business/pom.xml
@@ -7,12 +7,11 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
     
-    <artifactId>train-member</artifactId>
-    <properties>
-        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <maven.compiler.source>17</maven.compiler.source>
-        <maven.compiler.target>17</maven.compiler.target>
-    </properties>
+    <artifactId>train-business</artifactId>
+    <packaging>jar</packaging>
+    
+    <name>train-business</name>
+    <url>http://maven.apache.org</url>
     
     <dependencies>
         <dependency>
@@ -41,5 +40,4 @@
             </plugin>
         </plugins>
     </build>
-    
 </project>
