--- a/admin/package.json
+++ b/admin/package.json
@@ -14,6 +14,7 @@
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "dayjs": "^1.11.9",
+    "pinyin-pro": "^3.13.0",
     "vue": "^3.2.13",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
